# llx_flutter

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/llx_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: llx_flutter.podspec
ios/Classes/: llx_flutter.c
ios/Frameworks/: .gitignore
ios/Frameworks/llama.xcframework/: Info.plist
ios/Frameworks/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/ios-arm64/llama.framework/: llama
ios/Frameworks/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
lib/: llx_flutter.dart  llx_flutter_bindings_generated.dart
src/: CMakeLists.txt  llx_flutter.c  llx_flutter.h
